; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_dumpstack.c_oops_begin.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_dumpstack.c_oops_begin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@die_lock = common dso_local global i32 0, align 4
@die_owner = common dso_local global i32 0, align 4
@die_nest_count = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @oops_begin() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = call i32 (...) @oops_enter()
  %4 = load i64, i64* %2, align 8
  %5 = call i32 @raw_local_irq_save(i64 %4)
  %6 = call i32 (...) @smp_processor_id()
  store i32 %6, i32* %1, align 4
  %7 = call i32 @__raw_spin_trylock(i32* @die_lock)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %17, label %9

9:                                                ; preds = %0
  %10 = load i32, i32* %1, align 4
  %11 = load i32, i32* @die_owner, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %9
  br label %16

14:                                               ; preds = %9
  %15 = call i32 @__raw_spin_lock(i32* @die_lock)
  br label %16

16:                                               ; preds = %14, %13
  br label %17

17:                                               ; preds = %16, %0
  %18 = load i32, i32* @die_nest_count, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* @die_nest_count, align 4
  %20 = load i32, i32* %1, align 4
  store i32 %20, i32* @die_owner, align 4
  %21 = call i32 (...) @console_verbose()
  %22 = call i32 @bust_spinlocks(i32 1)
  %23 = load i64, i64* %2, align 8
  ret i64 %23
}

declare dso_local i32 @oops_enter(...) #1

declare dso_local i32 @raw_local_irq_save(i64) #1

declare dso_local i32 @smp_processor_id(...) #1

declare dso_local i32 @__raw_spin_trylock(i32*) #1

declare dso_local i32 @__raw_spin_lock(i32*) #1

declare dso_local i32 @console_verbose(...) #1

declare dso_local i32 @bust_spinlocks(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
